--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,8 @@
         "fakerphp/faker": "^1.21",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.16",
+        "scheb/2fa-bundle": "^6.7",
+        "scheb/2fa-email": "^6.7",
         "sensio/framework-extra-bundle": "^6.1",
         "symfony/asset": "6.2.*",
         "symfony/console": "6.2.*",
