--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "phpstan/phpdoc-parser": "^1.16",
         "scheb/2fa-bundle": "^6.7",
         "scheb/2fa-email": "^6.7",
+        "scheb/2fa-trusted-device": "^6.7",
         "sensio/framework-extra-bundle": "^6.1",
         "symfony/asset": "6.2.*",
         "symfony/console": "6.2.*",
