--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -27,7 +27,8 @@ security:
             two_factor:
                 auth_form_path: 2fa_login    # The route name you have used in the routes.yaml
                 check_path: 2fa_login_check  # The route name you have used in the routes.yaml
-
+                trusted_parameter_name: _trusted  # Name of the parameter for the trusted device option
+            
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
 
